fixed most format issues on mobile, need to just decide on design for form for mobile

--- a/src/Estimate.css
+++ b/src/Estimate.css
@@ -32,7 +32,7 @@
   padding-bottom: 5px; /* Add some space between the text and the underline */
 }
 .input-boxes {
-  margin:5px;
+  margin:0px;
 }
 
 /*Address details*/
@@ -51,8 +51,7 @@
 }
 
 .item-list{
-  display: grid;
-  grid-template-columns: 5fr 1fr;
+  display: flex;
 
 }
 .survey-group{
@@ -60,18 +59,16 @@
   width:95%;
   margin: 0 auto; /* Add this line to center the container */
   padding: 20px; /* Add some padding to create space between the content and the border */
-
-
-
 }
 .room-picker-button {
   flex:1;
 }
-.item-picker{
-  flex: 3;
+.item-picker-buttons {
+  flex: 4;
   padding-left: 10px;
 }
 .item-desc{
+  flex:6;
   padding: .75rem;
   font-size: 1rem;
   font-weight: normal;
@@ -89,6 +86,7 @@
   color: black;
 }
 .qty-button {
+  flex: 1;
   padding: .75rem;
   font-size: 1rem;
   font-weight: normal;
@@ -161,7 +159,7 @@
   display: grid;
   grid-template-columns: 1fr;
 }
-@media (max-width:768px) {
+@media (max-width:800px) {
   .form {
     width: 95%;
   }
@@ -170,5 +168,78 @@
   }
   .address textarea {
     width: 100%;
+  }
+  .survey-group{
+    display: block;
+    width:95%;
+    margin: 0 auto; /* Add this line to center the container */
+    padding: 0px; /* Add some padding to create space between the content and the border */
+
+  }
+  .room-button{
+    display: inline-block;
+    width: 100%;
+    padding: .5rem;
+    font-size: 1rem;
+    font-weight: normal;
+  }
+  .item-desc{
+    flex:8;
+    padding: .5rem;
+    font-size: .5rem;
+    font-weight: normal;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    border-bottom-left-radius:5px;
+    border-top-left-radius: 5px;
+  }
+  .qty-button {
+    flex: 1;
+    padding: .5rem;
+    font-size: .8rem;
+    font-weight: normal;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+  }
+  .room-picker-button {
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    padding-bottom: 10px;
+  }
+  .item-picker-buttons {
+    padding-left: 0px;
+    border: 0px solid #ccc; /* Border style, color, and width */
+
+  }
+  .item-picker{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+  }
+}
+@media (max-width:1600px) {
+  .form {
+    width: 60%;
+  }
+}
+@media (max-width:1400px) {
+  .form {
+    width: 70%;
+  }
+}
+@media (max-width:1200px) {
+  .form {
+    width: 80%;
+  }
+}
+@media (max-width:1020px) {
+  .form {
+    width: 95%;
   }
 }
